feat: add import stats to dashboard
